align-items fix

--- a/src/components/CartListItem/CartListItem.module.scss
+++ b/src/components/CartListItem/CartListItem.module.scss
@@ -3,4 +3,5 @@
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   margin-left: auto;
   margin-right: auto;
+  align-items: center;
 }
